--- a/src/_Game/Frame.fxml
+++ b/src/_Game/Frame.fxml
@@ -7,7 +7,9 @@
 <?import javafx.scene.shape.Sphere?>
 <?import javafx.scene.text.Font?>
 
-<GridPane alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="_Game.Controller">
+<GridPane alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+          minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111"
+          xmlns:fx="http://javafx.com/fxml/1" fx:controller="_Game.Controller">
     <columnConstraints>
         <ColumnConstraints />
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -20,13 +22,14 @@
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     </rowConstraints>
-    <Button mnemonicParsing="false" prefHeight="64.0" prefWidth="186.0" text="START" fx:id="startButton"
-            onAction="#clickedStartButton" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
+    <Button text="START" fx:id="startButton"
+            onAction="#clickedStartButton" mnemonicParsing="false" prefHeight="64.0" prefWidth="186.0"  GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
         <font>
           <Font name="System Bold" size="12.0" />
         </font>
     </Button>
-    <Button mnemonicParsing="false" prefHeight="64.0" prefWidth="186.0" text="STOP" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
+    <Button text="STOP" fx:id="stopButton"
+            onAction="#clickedStopButton" mnemonicParsing="false" prefHeight="64.0" prefWidth="186.0"  GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
         <font>
           <Font name="System Bold" size="12.0" />
         </font>
