--- a/src/_Game/Frame.fxml
+++ b/src/_Game/Frame.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Slider?>
@@ -29,18 +30,27 @@
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
+                     <HBox.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </HBox.margin>
                   </Button>
                   <Button fx:id="stopButton" mnemonicParsing="false" onAction="#clickedStopButton" prefHeight="7.0" prefWidth="87.0" text="STOP">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
+                     <HBox.margin>
+                        <Insets bottom="20.0" left="5.0" right="5.0" top="5.0" />
+                     </HBox.margin>
                   </Button>
-               </children></HBox>
+               </children>
+               <GridPane.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </GridPane.margin></HBox>
             <Slider prefHeight="14.0" prefWidth="108.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
          </children>
       </GridPane>
    </bottom>
    <center>
-      <Canvas height="336.0" width="497.0" BorderPane.alignment="CENTER" />
+      <Canvas height="330.0" width="500.0" BorderPane.alignment="CENTER" />
    </center>
 </BorderPane>
