--- a/src/_Game/Frame.fxml
+++ b/src/_Game/Frame.fxml
@@ -51,6 +51,6 @@
       </GridPane>
    </bottom>
    <center>
-      <Canvas height="330.0" width="500.0" BorderPane.alignment="CENTER" />
+      <Canvas height="330.0" width="500.0" BorderPane.alignment="CENTER" fx:id="Canvas"/>
    </center>
 </BorderPane>
