--- a/src/_Game/Frame.fxml
+++ b/src/_Game/Frame.fxml
@@ -46,11 +46,11 @@
                <GridPane.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </GridPane.margin></HBox>
-            <Slider prefHeight="14.0" prefWidth="108.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Slider fx:id="cellSlider" prefHeight="14.0" prefWidth="108.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
          </children>
       </GridPane>
    </bottom>
    <center>
-      <Canvas height="330.0" width="500.0" BorderPane.alignment="CENTER" fx:id="CanvasId"/>
+      <Canvas fx:id="CanvasId" height="336.0" width="500.0" BorderPane.alignment="CENTER" />
    </center>
 </BorderPane>
