--- a/src/_Game/Frame.fxml
+++ b/src/_Game/Frame.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="449.0" prefWidth="518.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="_Game.Controller">
+<BorderPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="_Game.Controller">
    <bottom>
       <GridPane BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -51,6 +51,6 @@
       </GridPane>
    </bottom>
    <center>
-      <Canvas fx:id="CanvasId" height="336.0" width="500.0" BorderPane.alignment="CENTER" />
+      <Canvas fx:id="CanvasId" height="390.0" width="471.0" BorderPane.alignment="CENTER" />
    </center>
 </BorderPane>
