--- a/src/_Game/Frame.fxml
+++ b/src/_Game/Frame.fxml
@@ -42,6 +42,14 @@
                         <Insets bottom="20.0" left="5.0" right="5.0" top="5.0" />
                      </HBox.margin>
                   </Button>
+                  <Button fx:id="circleButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#clickedCircleButton" prefHeight="7.0" prefWidth="87.0" text="CIRCLE">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets bottom="20.0" left="5.0" right="5.0" top="5.0" />
+                     </HBox.margin>
+                  </Button>
                </children>
                <GridPane.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
