--- a/src/_Game/Frame.fxml
+++ b/src/_Game/Frame.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="_Game.Controller">
+<BorderPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="_Game.Controller">
    <bottom>
       <GridPane BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -26,7 +26,7 @@
          <children>
             <HBox prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="2">
                <children>
-                  <Button fx:id="startButton" mnemonicParsing="false" onAction="#clickedStartButton" prefHeight="26.0" prefWidth="86.0" text="RANDOM">
+                  <Button fx:id="randomButton" mnemonicParsing="false" onAction="#clickedRandomButton" prefHeight="26.0" prefWidth="86.0" text="RANDOM">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
@@ -39,28 +39,53 @@
                         <Font name="System Bold" size="12.0" />
                      </font>
                      <HBox.margin>
-                        <Insets bottom="20.0" left="5.0" right="5.0" />
+                        <Insets bottom="5.0" left="5.0" right="5.0" />
                      </HBox.margin>
                   </Button>
-                  <Button fx:id="stopButton" mnemonicParsing="false" onAction="#clickedStopButton" prefHeight="7.0" prefWidth="87.0" text="CLEAR">
+                  <Button fx:id="invertButton" mnemonicParsing="false" onAction="#clickedInvertButton" prefHeight="7.0" prefWidth="87.0" text="INVERT">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                      <HBox.margin>
-                        <Insets bottom="20.0" left="5.0" right="5.0" />
+                        <Insets bottom="5.0" left="5.0" right="5.0" />
                      </HBox.margin>
                   </Button>
                </children>
                <GridPane.margin>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                  <Insets />
                </GridPane.margin></HBox>
             <Slider fx:id="cellSlider" prefHeight="14.0" prefWidth="108.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <HBox prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="1" />
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="93.0" text="START" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <HBox prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Button fx:id="startButton" mnemonicParsing="false" onAction="#clickedStartButton" prefHeight="25.0" prefWidth="85.0" text="START">
+                     <HBox.margin>
+                        <Insets left="5.0" right="5.0" top="5.0" />
+                     </HBox.margin>
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="stopButton" mnemonicParsing="false" onAction="#clickedStopButton" prefHeight="25.0" prefWidth="85.0" text="STOP">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="clearButton" mnemonicParsing="false" onAction="#clickedClearButton" prefHeight="25.0" prefWidth="85.0" text="CLEAR">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </HBox.margin>
+                  </Button>
+               </children></HBox>
          </children>
       </GridPane>
    </bottom>
    <center>
-      <Canvas fx:id="CanvasId" focusTraversable="true" height="500.0" onMousePressed="#clickedStartButton" width="500.0" BorderPane.alignment="CENTER" />
+      <Canvas fx:id="CanvasId" focusTraversable="true" height="500.0" width="500.0" BorderPane.alignment="CENTER" />
    </center>
 </BorderPane>
