--- a/src/_Game/Frame.fxml
+++ b/src/_Game/Frame.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -78,6 +79,7 @@
                   <Insets left="450.0" right="50.0" />
                </GridPane.margin>
             </Slider>
+            <ColorPicker onAction="#colorPicker" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             </children>
             <padding>
                 <Insets left="20.0" top="10.0" />
